--- a/README.org
+++ b/README.org
@@ -3,20 +3,46 @@
 Price/origin checks on olive oil around Villeray. 10$/1L refillable
 bottle?
 
-*** 17 Nov 2015 Telephone scripts
+*** 17 Nov 2015 Manitoba Harvest script
+
+Filled in Manitoba Harvest [[http://manitobaharvest.com/contact.html][contact form]].
+
+Hi, how are you? My name is Toby Dylan Hocking, and I am a researcher
+at McGill university in Montreal. I am researching the growers and
+distributers of food products, to provide information to consumers. My
+goal is to determine the entire supply chain starting at the farm and
+ending in the consumer's dinner plate.
+
+I bought your hemp seeds at Jean-Talon Market in Montreal and then I
+looked for information on your web site. Your YouTube video claimed
+that you buy hemp seeds from over 125 farmers. Can you please send me
+the addresses of these farmers? I would like to make a map that shows
+where exactly the farms are located.
+
+If you are unable to provide addresses for all of your farmers, then
+could you at least provide addresses for two or three of your farmers?
+If you can't do that, can you please explain why you do not wish to
+share this information with the consumer?
+
+Thanks in advance and have a nice day!
+
+*** 17 Nov 2015 Generic telephone scripts
 
 *Introduction to the research project:* Hi, how are you? My name is
 Toby Dylan Hocking, and I am a researcher at McGill university in
 Montreal. I am researching the growers and distributers of food
 products, to provide information to consumers. My goal is to determine
-the entire supply chain starting and the farm and ending in the
+the entire supply chain starting at the farm and ending in the
 consumer's dinner plate.
 
 *From me to you:* I bought hemp seeds at Jean-Talon Market and I saw
 your phone number on the packaging. Can you please tell me from who
 you bought the hemp seeds?
 
-*Positive response, details:*  
+*Positive response, details:* is your supplier a farmer?
+
+*Negative response, why:* OK, can you please explain why you do not
+wish to share this information with the consumer?
 
 *Introduction au projet de recherche:* Bonjour, ça va bien ? Je
 m'appelle Toby Dylan Hocking. Je suis chercheur à l'université McGill
@@ -41,7 +67,7 @@ consommateur ?
 Olive oil? Costco Terra Delyssa Organic Extra Virgin Olive Oil,
 12.99/2L (usually 14.99/2L).
 
-[[http://www.terradelyssa.com/product/get/tplParam/3/language/en][Terra Delyssa web site]] price 14.99/1L.
+[[http://www.terradelyssa.com/product/get/tplParam/3/language/en][Terra Delyssa web site]] price US$14.99/1L (irrelevant)
 
 *** 16 Nov 2015 Hemp seeds price checks
 
@@ -49,9 +75,9 @@ Hemp seeds at Mondiana Belanger:
 - Manitoba Harvest from 2.49/56g to 52.99/2.27kg, 
 - Aliments Trigone from 3.89/100g to 14.49/454g.
 
-TODO call Manitoba Harvest (800) 665-4367, Winnipeg Manitoba
-R2R-1V4. Their [[https://www.youtube.com/watch?v=8lBTILYe4Rw][video]] says that they get the hemp seeds from over 125
-farmers.
+TODO call Manitoba Harvest (800) 665-4367, 69 eagle drive winnipeg,
+manitoba R2R 1V4. Their [[https://www.youtube.com/watch?v=8lBTILYe4Rw][video]] says that they get the hemp seeds from
+over 125 farmers.
 
 *** 16 Nov 2015 Hemp seeds origin checks
 
