--- a/README.org
+++ b/README.org
@@ -3,6 +3,16 @@
 Price/origin checks on olive oil around Villeray. 10$/1L refillable
 bottle?
 
+*** Called aliments merci about hemp seeds
+
+asked for nellie. are the prices correct? 177$/6kg, 295$/34kg? no:
+177$/12.5lb, 295$/25lb
+Bio? Yes.
+
+Le nom de fournisseur est confidentiel. Pourquoi? "Protection."
+I gave my email tdhock5@gmail.com and she said she would ask 
+her boss if she can tell me the supplier list.
+
 *** 17 Nov 2015 Manitoba Harvest script
 
 Filled in Manitoba Harvest [[http://manitobaharvest.com/contact.html][contact form]].
