ferme michaca negative response

--- a/README.org
+++ b/README.org
@@ -3,7 +3,15 @@
 Price/origin checks on olive oil around Villeray. 10$/1L refillable
 bottle?
 
-*** Called aliments merci about hemp seeds
+*** 17 Nov 2015 Called Ferme Michaca (450) 264-4369
+
+Elle ne sait pas de quel ferme les graines viennent.
+Elle fait affaires avec une grossiste,
+et elle ne peut pas me donner le nom/addresse.
+Pourquoi? C'est "personnel" 
+il faut faire des recherches sur internet.
+
+*** 17 Nov 2015 Called aliments merci about hemp seeds
 
 asked for nellie. are the prices correct? 177$/6kg, 295$/34kg? no:
 177$/12.5lb, 295$/25lb
