--- a/README.org
+++ b/README.org
@@ -3,6 +3,15 @@
 Price/origin checks on olive oil around Villeray. 10$/1L refillable
 bottle?
 
+*** 17 Nov 2015 Called Yupik +1-514-787-1600
+
+Receptionist transferred me to 
+on n'a pas ce type information.
+canadian + chinois. ne sais pas quel produit est dispo chez lufa.
+manitoba ou? chinois no idea.
+Matt Yupik another office
+(514)381-9790 Totsimpex quality control dept.
+
 *** 17 Nov 2015 Called Ferme Michaca (450) 264-4369
 
 Elle ne sait pas de quel ferme les graines viennent.
