--- a/places/Mondiana_Jean_Talon.org
+++ b/places/Mondiana_Jean_Talon.org
@@ -1,6 +1,11 @@
+** News
+
+- 23 Dec 2015 :: these are the cheapest hemp seeds. is this price
+     real?
+
 ** Prices
 
 | date        | what       | bio | manufacturer     | quantity | unit |  CAD |
 |-------------+------------+-----+------------------+----------+------+------|
-| 14 Dec 2015 | [[../products/Hemp_seeds.org][Hemp seeds]] | yes | Aliments Trigone |     2.27 | kg   | 8.99 |
+| 14 Dec 2015 | [[../products/Hemp_seeds.org][Hemp seeds]] | yes | [[file:Aliments_Trigone.org][Aliments Trigone]] |     2.27 | kg   | 8.99 |
 
