--- a/places/Aliments_Trigone.org
+++ b/places/Aliments_Trigone.org
@@ -1,3 +1,5 @@
+** News
+
 - 16 Nov 2015, tdhock: Called Aliments Trigone (877) 259-7491. Talked
   to Cathy LEMONDE about where their hemp seeds come from. She said
   they come from either the Canadian West, or from Quebec. When I
@@ -6,3 +8,7 @@
   could call back and ask her boss Jacques. 93, chemin de l'Aqueduc,
   Saint-François-de-la-Rivière-du-Sud, AC Canada, G0R-3A0. (418)
   259-7414 bio@alimentstrigone
+
+** TODO call back and ask
+
+Where do they buy their hemp seeds from? Jacques (418) 259-7414
