--- a/places/Eloi_Beauregard.org
+++ b/places/Eloi_Beauregard.org
@@ -1,2 +1,5 @@
+** News
+
 - 18 Nov 2015, tdhock: Interesting [[http://fpaq.ca/wp-content/uploads/2015/02/InfoSirop_Juin215_Web1.pdf][InfoSirop]] 20-page PDF, including
-  prices "en vrac." Prices: Clair more expensive than ambree/fonce.
+  prices "en vrac." Prices: Clair more expensive than ambree/fonce. On
+  the maple can it is written (No Permis 3044) (450)797-2300.
