--- a/places/Lévisienne.org
+++ b/places/Lévisienne.org
@@ -1,1 +1,8 @@
+** News
+
+- 2015-12-24 :: got info from web site of [[file:Ferme_Le_Crepuscule.org][Ferme Le Crepuscule]].
+
+** Data
+
 - Address :: l'Heptade 5350 blv. Guillaume-Couture
+
