--- a/places/Mondiana_Belanger.org
+++ b/places/Mondiana_Belanger.org
@@ -1,4 +1,7 @@
+** News
+
 - 16 Nov 2015, tdhock: hemp seeds at Mondiana Belanger.
   Manitoba Harvest from 2.49/56g to 52.99/2.27kg, 
   Aliments Trigone from 3.89/100g to 14.49/454g.
 
+** TODO public prices
