--- a/places/Yupik.org
+++ b/places/Yupik.org
@@ -1,3 +1,5 @@
+** News
+
 - 17 Nov 2015, tdhock: Receptionist transferred me to Matt, who said
   "on n'a pas ce type information."
   canadian + chinois. ne sais pas quel produit est dispo chez lufa.
@@ -7,3 +9,5 @@
 - 16 Nov 2015, tdhock: Yupik's [[http://www.yupik.ca/products/10019-ORGANIC-HULLED-HEMP-SEEDS/][hemp seeds web page]] says they sell them
   for 16.79$/lb. TODO call them and ask where they get them
   +1-514-787-1600, 1-855-449-8745.
+
+** TODO public prices
