--- a/places/Chèvrerie_du_Buckland.org
+++ b/places/Chèvrerie_du_Buckland.org
@@ -4,6 +4,4 @@ Nov 2015, talked to Manon who sells goat cheese at Jean-Talon
 market. She said some cheese comes from Maryse and Marc (418)
 789-2760.
 
-
-
-
+** TODO take a tour of the cheese farm
