--- a/places/Ferme_Le_Crepuscule.org
+++ b/places/Ferme_Le_Crepuscule.org
@@ -9,14 +9,14 @@ Prices here come from the web site, but in other circumstances they could come f
 - a phone call,
 - an in-store display.
 
-| product       | organic     | description |   CAD | quantity | unit |       date |
-|---------------+-------------+-------------+-------+----------+------+------------|
-| [[file:../products/Eggs.org][Eggs]]          | [[file:../certifications/Qu%C3%A9bec_Vrai.org][Québec Vrai]] | jumbo       |  7.49 |       12 | eggs | 2015-11-18 |
-| [[file:../products/Eggs.org][Eggs]]          | [[file:../certifications/Qu%C3%A9bec_Vrai.org][Québec Vrai]] | gros        |  6.99 |       12 | eggs | 2015-11-18 |
-| [[file:../products/Eggs.org][Eggs]]          | [[file:../certifications/Qu%C3%A9bec_Vrai.org][Québec Vrai]] | moyen       |  6.49 |       12 | eggs | 2015-11-18 |
-| [[file:../products/Eggs.org][Eggs]]          | [[file:../certifications/Qu%C3%A9bec_Vrai.org][Québec Vrai]] | petit       |  5.99 |       12 | eggs | 2015-11-18 |
-| [[file:../products/Maple_syrup.org][Maple syrup]]   | [[file:../certifications/Qu%C3%A9bec_Vrai.org][Québec Vrai]] | unknown     | 20.49 |        1 | L    | 2015-11-18 |
-| [[file:../products/Whole_chicken.org][Whole chicken]] | [[file:../certifications/Qu%C3%A9bec_Vrai.org][Québec Vrai]] | d'été       | 11.99 |        1 | kg   | 2015-11-23 |
+| product       | organic     | description |   CAD | quantity | unit  |       date |
+|---------------+-------------+-------------+-------+----------+-------+------------|
+| [[file:../products/Chicken_Eggs.org][Eggs]]          | [[file:../certifications/Québec_Vrai.org][Québec Vrai]] | jumbo       |  7.49 |       12 | jumbo | 2015-11-18 |
+| [[file:../products/Chicken_Eggs.org][Eggs]]          | [[file:../certifications/Québec_Vrai.org][Québec Vrai]] | gros        |  6.99 |       12 | gros  | 2015-11-18 |
+| [[file:../products/Chicken_Eggs.org][Eggs]]          | [[file:../certifications/Québec_Vrai.org][Québec Vrai]] | moyen       |  6.49 |       12 | moyen | 2015-11-18 |
+| [[file:../products/Chicken_Eggs.org][Eggs]]          | [[file:../certifications/Québec_Vrai.org][Québec Vrai]] | petit       |  5.99 |       12 | petit | 2015-11-18 |
+| [[file:../products/Maple_syrup.org][Maple syrup]]   | [[file:../certifications/Québec_Vrai.org][Québec Vrai]] | unknown     | 20.49 |        1 | L     | 2015-11-18 |
+| [[file:../products/Whole_chicken.org][Whole chicken]] | [[file:../certifications/Québec_Vrai.org][Québec Vrai]] | d'été       | 11.99 |        1 | kg    | 2015-11-23 |
 
 how to compare with prices offered at their boutique on the farm?
 
