--- a/places/Le_Capitaine.org
+++ b/places/Le_Capitaine.org
@@ -1,8 +1,8 @@
 ** Prices
 
-| date        | product | bio | manufacturer | quantity | unit  |  CAD |
-|-------------+---------+-----+--------------+----------+-------+------|
-| 14 Dec 2015 | [[../products/Eggs.org][Eggs]]    | no  | ?            |       12 | jumbo | 3.50 |
-| 14 Dec 2015 | [[../products/Eggs.org][Eggs]]    | no  | ?            |       12 | XL    | 3.25 |
-| 14 Dec 2015 | [[../products/Eggs.org][Eggs]]    | no  | ?            |       12 | L     | 3.00 |
+|       date | product | bio | manufacturer | quantity | unit  |  CAD |
+|------------+---------+-----+--------------+----------+-------+------|
+| 2015-12-14 | [[../products/Chicken_Eggs.org][Eggs]]    | no  | ?            |       12 | jumbo | 3.50 |
+| 2015-12-14 | [[../products/Chicken_Eggs.org][Eggs]]    | no  | ?            |       12 | XL    | 3.25 |
+| 2015-12-14 | [[../products/Chicken_Eggs.org][Eggs]]    | no  | ?            |       12 | L     | 3.00 |
 
